stringparser/grammer.peg
start = string_literal
string_literal = '"' values:(escape_dbl)* '"' {return values.join('');}  /
                 '\'' values:(escape_single)* '\'' {return values.join('');}
escape_dbl = escape_sequence
 / char_dbl_quote
escape_single = escape_sequence
 / char_single_quote
escape_sequence = values:('\\' second:[\\nrtbf"\']) {return values.join('');}
char_dbl_quote = [^"\\]
char_single_quote = [^\'\\]
